--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,10 @@ grafana:
   container_name: grafana
   ports:
     - "3000:3000"
+  environment:
+    - GF_SERVER_DOMAIN
+    - GF_SERVER_SERVE_FROM_SUB_PATH
+    - GF_SERVER_ROOT_URL
   env_file:
     - env.grafana
   user: "0"
