--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,4 @@ grafana:
   volumes:
     - ./grafana/data:/var/lib/grafana
     - ./grafana/provisioning:/etc/grafana/provisioning
+    - ./grafana/grafana.ini:/etc/grafana/grafana.ini
