restart: unless-stopped for InfluxDB and Grafana

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 influxdb:
   image: influxdb:latest
   container_name: influxdb
+  restart: unless-stopped
   ports:
     - "8086:8086"
   env_file:
@@ -11,6 +12,7 @@ influxdb:
 grafana:
   image: grafana/grafana:latest
   container_name: grafana
+  restart: unless-stopped
   ports:
     - "3000:3000"
   environment:
